--- a/wrangler.0.toml
+++ b/wrangler.0.toml
@@ -4,7 +4,7 @@ main = "./index.js"
 compatibility_date = "2021-09-28"
 workers_dev = true
 
-vars = { TG_WEBHOOK_URL = "https://tgbot-biliantitracking.yjbeetle.workers.dev", TG_BOT_TOKEN = "" }
+vars = { TG_WEBHOOK_URL = "https://tgbot-biliantitracking.username.workers.dev", TG_BOT_TOKEN = "0123456789:AaBbCcDdEeFfGgHhIiJjKk-AaBbCcDdEeFf" }
 
 [env.dev]
-vars = { TG_WEBHOOK_URL = "https://xxx.xxx", TG_BOT_TOKEN = "" }
+vars = { TG_WEBHOOK_URL = "https://example.com", TG_BOT_TOKEN = "0123456789:AaBbCcDdEeFfGgHhIiJjKk-AaBbCcDdEeFf" }
