--- a/wrangler.example.toml
+++ b/wrangler.example.toml
@@ -4,7 +4,7 @@ main = "./index.js"
 compatibility_date = "2023-03-21"
 workers_dev = true
 
-vars = { TG_WEBHOOK_URL = "https://tgbot-biliantitracking.username.workers.dev", TG_BOT_TOKEN = "0123456789:AaBbCcDdEeFfGgHhIiJjKk-AaBbCcDdEeFf" }
+vars = { TG_BOT_TOKEN = "0123456789:AaBbCcDdEeFfGgHhIiJjKk-AaBbCcDdEeFf" }
 
 [env.dev]
-vars = { TG_WEBHOOK_URL = "https://example.com", TG_BOT_TOKEN = "0123456789:AaBbCcDdEeFfGgHhIiJjKk-AaBbCcDdEeFf" }
+vars = { TG_BOT_TOKEN = "0123456789:AaBbCcDdEeFfGgHhIiJjKk-AaBbCcDdEeFf" }
