--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "name": "tgbot-link-cleaner",
+  "type": "module",
   "version": "1.0.0",
   "description": "TGBot LinkCleaner",
   "main": "index.js",
